// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> container render property - isLogged: false 1`] = `
<Fragment>
  <Connect(LoginForm) />
</Fragment>
`;

exports[`<Home /> container render property - isLogged: true 1`] = `
<Fragment>
  <Connect(Dashboard) />
</Fragment>
`;
